Wed Sep  1 15:54:17 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/StringMatch.h, htlib/StringMatch.cc(Pattern, IgnoreCase):
	Add an IgnorePunct() method, which allows matches to skip over valid
	punctuation, change Pattern() and IgnoreCase() to accomodate this.
	* htsearch/htsearch.cc(main, createLogicalWords): use IgnorePunct()
	to highlight matching words in excerpts regardless of punctuation,
	toss out old origPattern, and don't add short or bad words to
	logicalPattern.

	* htlib/HtWordType.h, htlib/HtWordType.cc(Initialize): set up and
	use a lookup table to speed up HtIsWordChar() and HtIsStrictWordChar().

Wed Sep  1 15:48:13 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/PDF.cc(parse), htcommon/defaults.cc, htdoc/attrs.html:
	Fix PDF.cc to handle acroread in Acrobat 4, which has a bug with
	the -pairs option.  It turns out that even without the -pairs
	option, acroread 4 is still prone to segmentation violations when
	generating PostScript, so acroread 3 is a better choice anyway.

	* htdoc/FAQ.html: Added the past few month's updates to the FAQ.

	* contrib/parse_doc.pl: Updated to latest version, adapted for
	xpdf 0.90.

Wed Sep  1 15:39:41 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	Applied "bugfixes" patch collection, which I had posted to
	htdig@htdig.org mailing list in August.  Changes include...

	* htsearch/Display.cc(expandVariables): Fix problem with $(VAR)
	at end of template string not being expanded.

	* htlib/URL.cc(URL): Fix PR#566 by setting the correct length of the
	string being matched. 'http://' is 7 characters. Submitted by
	<wolfgang.pichler@creditanstalt.co.at>.

	* htdig/HTML.h, htdig/HTML.cc(do_tag, transSGML): Fix the HTML parser
	to decode SGML entities within tag attributes.

	* htlib/URL.cc(ServerAlias): Fix server_alias entries so port defaults
	to 80 if omitted.

	* htlib/URL.cc(removeIndex): Fix the infamous problem with files